Fix answer7 component overflow

--- a/components/dom-manipulation-menu/index.style.module.scss
+++ b/components/dom-manipulation-menu/index.style.module.scss
@@ -1,3 +1,8 @@
 .DOMManipulationMenu {
-  background-color: #dedede;
+  background-color: #ebebeb;
+  max-width: 100%;
+
+  @media(max-width: 768px) {
+    flex-direction: column;
+  }
 }
