--- a/components/presentation/index.style.module.scss
+++ b/components/presentation/index.style.module.scss
@@ -2,6 +2,7 @@
     min-height: 90vh;
     display: flex;
     width: 100%;
+    max-width: 100%;
     gap: 2rem;
     flex-direction: column;
     justify-content: center;
@@ -10,7 +11,7 @@
     gap: 2rem;
 
     @media(max-width: 768px) {
-        padding: 0.5rem;
+        padding: 0.25rem;
         gap: 0.5rem;
     }
 
